[package]
name = "line_approximator"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Crate aims to find line thicknesses such that an image is well approximated"
keywords = ["2d","graphic"] 

[lib]
name = "line_approximator_lib"
path = "src/lib.rs"

[[bin]]
name = "line_approximator"
path = "src/bin.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[toolchain]
channel = "nightly"

[dependencies]
num = "0.4.0"
image = "0.24.4"
itertools = "0.10.5"
num-traits = "0.2.15"
clap = {version="4.0.19",features = [ "derive" ]}
htree = "0.1.3"
imageproc = "0.23.0"
hilbert_index = "0.2.0"
serde_json = "1.0.59"
